--- a/index.html
+++ b/index.html
@@ -353,7 +353,9 @@
             </div>
             <!-- Footer -->
             <footer class="footer">
-
+                <div class="footer-top">
+                    <img src="img/footer.png" alt="">
+                </div>
             </footer>
             <!-- End footer -->
         </div>
