--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                 <!-- End Navigation -->
             </div>
             <div class="intro">
-                <br>BtoB
-                SaaSに携わる人なら意識しておきたい、顧客のための「ライトサクセス／ディープサクセス」という新定説。３行以上になる場合は、最後「…」になるよう設定します。112文字を超えた場合に…に。
+                <br>BtoB SaaSに携わる人なら意識しておきたい、顧客のための「ライトサクセス／ディープサクセス」という新定説。３行以上になる場合は、最後「…」になるよう設定します。112文字を超えた場合に…に。
             </div>
         </div>
         <!-- End Menu -->
@@ -67,9 +66,8 @@
                                 <span class="author">作成者：山田 太郎</span>
                             </div>
                             <div class="top-new-content">
-                                このブログの読者で、CSに関する方ならおなじみ、ALL STAR SAAS
-                                FUNDメンターの山田ひさのりさん。今回は、山田さんが独自に考案したというカスタマーサクセスにおける観点から見た「ライトサクセス／ディープサクセス」について、寄稿してくださいました。<br>
-                                この考えは、ALL STAR SAAS FUNDと山田さんで開講した「SaaS CS集中講座」でも取り上げています。以前の記事では、下記のように概念を説明しています。
+                                このブログの読者で、CSに関する方ならおなじみ、ALL STAR SAAS FUNDメンターの山田ひさのりさん。今回は、山田さんが独自に考案したというカスタマーサクセスにおける観点から見た「ライトサクセス／ディープサクセス」について、寄稿してくださいました。
+                                <br> この考えは、ALL STAR SAAS FUNDと山田さんで開講した「SaaS CS集中講座」でも取り上げています。以前の記事では、下記のように概念を説明しています。
                             </div>
                             <div class="g"></div>
                         </div>
@@ -96,11 +94,10 @@
                         <div class="new-1">
                             <div class="new-1-tile">「Sansanだから通じるメソッドだ」は、本当か？</div>
                             <div class="new-1-content">
-                                「ライトサクセス／ディープサクセス」の考え方は独自に考案したもので、国内外のSaaSやカスタマーサクセス界隈において一般的というわけではありません。<br>
-                                私は長らくSansanのカスタマーサクセス部門で戦略立案に携わる傍ら、カスタマーサクセスの情報発信にも力を入れてきました。発信する情報はSansanで養われ、鍛えられたCSメソッドの数々です。すると、こんなご意見をいただくことがありました。<br>
-                                最初は自社への不満を漏らしているだけかとも思いましたが、主張をされている方々のプロダクトをつぶさに見てみると、提供している価値とそのサクセスの対象がさまざまであることに気づきました。つまり、サクセスしにくいプロダクトとしての共通性があるのではなく、他の観点によってメソッドが通じるか否かが判断されるようです。<br>
-                                <img src="img/icon.png" alt="">
-                                多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。
+                                「ライトサクセス／ディープサクセス」の考え方は独自に考案したもので、国内外のSaaSやカスタマーサクセス界隈において一般的というわけではありません。<br> 私は長らくSansanのカスタマーサクセス部門で戦略立案に携わる傍ら、カスタマーサクセスの情報発信にも力を入れてきました。発信する情報はSansanで養われ、鍛えられたCSメソッドの数々です。すると、こんなご意見をいただくことがありました。
+                                <br> 最初は自社への不満を漏らしているだけかとも思いましたが、主張をされている方々のプロダクトをつぶさに見てみると、提供している価値とそのサクセスの対象がさまざまであることに気づきました。つまり、サクセスしにくいプロダクトとしての共通性があるのではなく、他の観点によってメソッドが通じるか否かが判断されるようです。
+                                <br>
+                                <img src="img/icon.png" alt=""> 多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。
                             </div>
                         </div>
                         <div class="new-2">
@@ -112,8 +109,7 @@
                         <div class="new-3">
                             <div class="new-2-tile">ライトサクセスとディープサクセス</div>
                             <div class="new-3-content">
-                                ライトサクセスの定義は（顧客の）現場にサクセスをもたらしている状態です。そして、ディープサクセスとは（顧客の）経営にサクセスをもたらしている状態です。<br>
-                                多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。
+                                ライトサクセスの定義は（顧客の）現場にサクセスをもたらしている状態です。そして、ディープサクセスとは（顧客の）経営にサクセスをもたらしている状態です。<br> 多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。
                             </div>
                             <div class="news-3-img">
                                 <img src="img/new1.png" alt="">
@@ -141,8 +137,7 @@
                                     <img src="img/new3.png" alt="">
                                 </div>
                                 <div class="new-5-content">
-                                    標準本文フォントサイズ16px。Newsと同じフォント設定です。ｐブロックをわけるとマージンボトムに30pxはいります。太文字の設定はBoldの設定にしています。文字の大きさ、量、字間、行間などを確認するために入れています。これはダミーです。文字の大きさ、量、字間、行間などを確認するために入れています。文字の大きさ、量、字間、行間などを確認するために入れています。これはダミーです。文字の大きさ、量、字間、行間などを確認するために入れています。
-                                    標準本文フォントサイズ16px。Newsと同じフォント設定です。ｐブロックをわけるとマージンボトムに30pxはいります。太文字の設定はBoldの設定にしています。
+                                    標準本文フォントサイズ16px。Newsと同じフォント設定です。ｐブロックをわけるとマージンボトムに30pxはいります。太文字の設定はBoldの設定にしています。文字の大きさ、量、字間、行間などを確認するために入れています。これはダミーです。文字の大きさ、量、字間、行間などを確認するために入れています。文字の大きさ、量、字間、行間などを確認するために入れています。これはダミーです。文字の大きさ、量、字間、行間などを確認するために入れています。 標準本文フォントサイズ16px。Newsと同じフォント設定です。ｐブロックをわけるとマージンボトムに30pxはいります。太文字の設定はBoldの設定にしています。
                                 </div>
                             </div>
                         </div>
@@ -150,10 +145,7 @@
                     <!-- End News  -->
                     <!-- Link YouTube -->
                     <div class="yt">
-                        <iframe width="80%" height="450px" src="https://www.youtube.com/embed/gQlMMD8auMs"
-                            title="BLACKPINK - ‘Pink Venom’ M/V" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen>
+                        <iframe width="80%" height="450px" src="https://www.youtube.com/embed/gQlMMD8auMs" title="BLACKPINK - ‘Pink Venom’ M/V" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                         </iframe>
                     </div>
                     <!-- Tables -->
@@ -278,8 +270,7 @@
                             標準本文フォントサイズ16px。Newsと同じフォント設定です。ｐブロックをわけるとマージンボトムに30pxはいります。文字の大きさ、量、字間、行間などを確認するために入れています。
                         </p>
                     </div>
-                    <div class="quote-url">引用：<a class=""
-                            href="https://www.youtube.com/watch?v=9jzugIzksag&ab_channel=%EC%8A%A4%EB%B8%8C%EC%8A%A4%EC%BC%80%EC%9D%B4%ED%8C%9DXINKIGAYO">引用元の書籍の公式URLや、参考ページURLを記載。リンクあり</a>
+                    <div class="quote-url">引用：<a class="" href="https://www.youtube.com/watch?v=9jzugIzksag&ab_channel=%EC%8A%A4%EB%B8%8C%EC%8A%A4%EC%BC%80%EC%9D%B4%ED%8C%9DXINKIGAYO">引用元の書籍の公式URLや、参考ページURLを記載。リンクあり</a>
                     </div>
                     <!--end next new-->
                 </div>
@@ -339,28 +330,66 @@
                     <button class="button1">コラム一覧へ <ion-icon style="padding-left: 30px ;" name="arrow-forward-outline">
                         </ion-icon></button>
                 </div>
-                <div class="gototop">
-                    <button onclick="topFunction()" class="button2" title="Go to top">
+                <div class="scrollToTop">
+                    <div class="scrollToTop_item top">
+                        <span>お問い合わせ</span>
+                    </div>
+                    <button onclick="topFunction()" class="scrollToTop_item bottom">
                         <ion-icon class="button_icon" id="myBtn" name="chevron-up-outline"></ion-icon>
-                        <p class="top">TOP</p>
+                        <span>TOP</span>
                     </button>
-                </div>
-                <div class="goto_contact">
-                    <ion-icon class="button_contact" name="mail-outline"></ion-icon>
-                    <p class="contact">お問い合わせ</p>
                 </div>
                 <!-- End Main Content -->
             </div>
-            <!-- Footer -->
-            <footer class="footer">
-                <div class="footer-top">
+        </div>
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="footer_item top">
+                <div class="item_img">
                     <img src="img/footer.png" alt="">
                 </div>
-            </footer>
-            <!-- End footer -->
-        </div>
-    </div>
-    </div>
+                <div class="item_contact">
+                    <p>Contact</p>
+                    <span>altcircleに関連するお問い合わせはお気軽にご連絡ください。</span>
+                    <button><ion-icon name="arrow-forward-outline"></ion-icon></button>
+                </div>
+            </div>
+            <div class="footer_item bottom">
+                <div class="item_row">
+                    <img src="./img/logo1.png" alt="">
+                </div>
+                <div class="item_row list">
+                    <div class="row_item">
+                        <h3>お知らせ</h3>
+                        <h3>altcircleとは</h3>
+                        <h3>解決する課題</h3>
+                        <h3>サービス</h3>
+                        <ul>
+                            <li>マーケティング戦略策定</li>
+                            <li>デジタルコミュニケーション</li>
+                            <li>デジタルコンテンツ</li>
+                            <li>エンタープライズEC</li>
+                            <li>コンタクトセンター</li>
+                            <li>データプラットフォーム</li>
+                            <li>ビジネスプロセスアウトソーシング</li>
+                        </ul>
+                        <h3>コラム</h3>
+                    </div>
+                    <div class="row_item">
+                        <h2>お問い合わせ</h3>
+                        <h2>会社情報</h3>
+                        <h2>個人情報保護への取り組み</h3>
+                    </div>
+                </div>
+                <div class="item_row">
+                    <p>powered by SCSK</p>
+                </div>
+                <div class="item_row">
+                    <p>※本WEBサイトに記載の社名および製品名は各社の商標または登録商標です。</p>
+                </div>
+            </div>
+        </footer>
+        <!-- End footer -->
     </div>
 </body>
 
@@ -370,7 +399,9 @@
     let mybutton = document.getElementById("myBtn");
 
     // When the user scrolls down 20px from the top of the document, show the button
-    window.onscroll = function () { scrollFunction() };
+    window.onscroll = function() {
+        scrollFunction()
+    };
 
     function scrollFunction() {
         if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
@@ -385,5 +416,4 @@
         document.body.scrollTop = 0; // For Safari
         document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
     }
-
 </script>
