--- a/top.html
+++ b/top.html
@@ -9,6 +9,7 @@
     <!-- Link css -->
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/top.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- jQuery library -->
@@ -20,47 +21,100 @@
 </head>
 
 <body>
-    <div class="cover">
-        <div class="wapper">
-            <!-- Menu -->
-
-            <div class="banner">
-            </div>
-            <div class="menu-bar">
-                <div class="menu-bar-inner">
-                    <div class="logo">
-                        <img src="img/logo1.png" alt="">
-                    </div>
-                    <!-- Navigation -->
-                    <nav class="navbar-menu">
-                        <ul class="navbar">
-                            <li class="nav-item"><a href="#">お知らせ</a></li>
-                            <li class="nav-item"><a href="#">altcircleとは</a></li>
-                            <li class="nav-item"><a href="#">解決する課題</a></li>
-                            <li class="nav-item"><a href="#">サービス</a></li>
-                            <li class="nav-item"><a href="#">コラム</a></li>
-                            <li class="nav-item"><a href="#"><i class="fa-regular fa-envelope"></i>お問い合わせ</a></li>
-                        </ul>
-                    </nav>
-                    <!-- End Navigation -->
-                </div>
-                <div class="intro">
-                    <br>BtoB
-                    SaaSに携わる人なら意識しておきたい、顧客のための「ライトサクセス／ディープサクセス」という新定説。３行以上になる場合は、最後「…」になるよう設定します。112文字を超えた場合に…に。
-                </div>
-            </div>
-            <!-- End Menu -->
-            <!-- Main Content -->
+    <div class="wapper">
+        <!-- Menu -->
+        <div class="banner3">
         </div>
-        <!-- Footer -->
-        <footer class="footer">
-
-        </footer>
-        <!-- End footer -->
+        <div class="menu-bar">
+            <div class="menu-bar-inner">
+                <div class="logo">
+                    <img src="img/logo1.png" alt="">
+                </div>
+                <!-- Navigation -->
+                <nav class="navbar-menu">
+                    <ul class="navbar">
+                        <li class="nav-item"><a href="#">お知らせ</a></li>
+                        <li class="nav-item"><a href="#">altcircleとは</a></li>
+                        <li class="nav-item"><a href="#">解決する課題</a></li>
+                        <li class="nav-item"><a href="#">サービス</a></li>
+                        <li class="nav-item"><a href="#">コラム</a></li>
+                        <li class="nav-item"><a href="#"><i class="fa-regular fa-envelope"></i>お問い合わせ</a></li>
+                    </ul>
+                </nav>
+                <!-- End Navigation -->
+            </div>
+            <div class="intro_top">
+                進化を続ける <br>
+                CXプラットフォーム <br>
+                altcircle
+            </div>
+        </div>
+        <!-- End Menu -->
+        <div class="cover">
+            <!-- Main Content -->
+            <div class="main-content-top">
+                <div class="container">
+                    <!-- Breadcrumb -->
+                    <div class="breadcrumbs">
+                        <div class="new-event">News / Event </div>
+                    </div>
+                    <!-- End Breadcrumb -->
+                </div>
+            </div>
+        </div>
+        <!-- End Main Content -->
     </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer_item top">
+            <div class="item_img">
+                <img src="img/footer.png" alt="">
+            </div>
+            <div class="item_contact">
+                <p>Contact</p>
+                <span>altcircleに関連するお問い合わせはお気軽にご連絡ください。</span>
+                <button>
+                    <ion-icon name="arrow-forward-outline"></ion-icon>
+                </button>
+            </div>
+        </div>
+        <div class="footer_item bottom">
+            <div class="item_row">
+                <img src="./img/logo1.png" alt="">
+            </div>
+            <div class="item_row list">
+                <div class="row_item">
+                    <h3>お知らせ</h3>
+                    <h3>altcircleとは</h3>
+                    <h3>解決する課題</h3>
+                    <h3>サービス</h3>
+                    <ul>
+                        <li>マーケティング戦略策定</li>
+                        <li>デジタルコミュニケーション</li>
+                        <li>デジタルコンテンツ</li>
+                        <li>エンタープライズEC</li>
+                        <li>コンタクトセンター</li>
+                        <li>データプラットフォーム</li>
+                        <li>ビジネスプロセスアウトソーシング</li>
+                    </ul>
+                    <h3>コラム</h3>
+                </div>
+                <div class="row_item">
+                    <h2>お問い合わせ</h2>
+                    <h2>会社情報</h2>
+                    <h2>個人情報保護への取り組み</h2>
+                </div>
+            </div>
+            <div class="item_row">
+                <p>powered by SCSK</p>
+            </div>
+            <div class="item_row">
+                <p>※本WEBサイトに記載の社名および製品名は各社の商標または登録商標です。</p>
+            </div>
+        </div>
+    </footer>
+    <!-- End footer -->
     </div>
-
-
 </body>
 
 </html>
