--- a/index.html
+++ b/index.html
@@ -80,13 +80,15 @@
                     <!-- End Banner -->
                     <!-- Index -->
                     <div class="index">
-                        <li class="index-content"><a href="#">Index</a></li>
-                        <span class="index-content">「Sansanだから通じるメソッドだ」は、本当か？<br></span>
-                        <span class="index-content">「2つのサクセス」という考え方<br></span>
-                        <span class="index-content">ライトサクセスとディープサクセス<br></span>
-                        <span class="index-content">Sansanにおける２種類のサクセス<br></span>
-                        <span class="index-content">Sansanにおける２種類のサクセス<br></span>
-                        <span class="index-content">ライトサクセスとディープサクセスの発生パターン</span>
+                        <div class="index-item">
+                            <li class="index-tile"><a href="#">Index</a></li>
+                            <span class="index-content1">「Sansanだから通じるメソッドだ」は、本当か？<br></span>
+                            <span class="index-content1">「2つのサクセス」という考え方<br></span>
+                            <span class="index-content">ライトサクセスとディープサクセス<br></span>
+                            <span class="index-content">Sansanにおける２種類のサクセス<br></span>
+                            <span class="index-content1">Sansanにおける２種類のサクセス<br></span>
+                            <span class="index-content">ライトサクセスとディープサクセスの発生パターン</span>
+                        </div>
                     </div>
                     <!-- End Index -->
                     <!-- News -->
