--- a/top.html
+++ b/top.html
@@ -18,6 +18,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
@@ -56,7 +58,16 @@
                 <div class="container">
                     <!-- Breadcrumb -->
                     <div class="breadcrumbs">
-                        <div class="new-event">News / Event </div>
+                        <div class="new-event">
+                        <p >News / Event </p>
+                        <div class="column_list">
+                            <button class="button2">お知らせ一覧へ<ion-icon style="padding-left: 30px ;" name="arrow-forward-outline">
+                            </ion-icon></button>
+                        </div>
+                        </div>
+                        <div class="notify">
+                            お知らせ / イベント情報
+                        </div>
                     </div>
                     <!-- End Breadcrumb -->
                 </div>
