--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                             <p class="index-heading"><a href="#">Index</a></p>
                             <p class="index-title">「Sansanだから通じるメソッドだ」は、本当か？</p>
                             <p class="index-title">「2つのサクセス」という考え方</p>
-                            <span class="index-span">ライトサクセスとディープサクセス<br></span>
-                            <span class="index-span">Sansanにおける２種類のサクセス<br></span>
+                            <p class="index-span">ライトサクセスとディープサクセス</p>
+                            <p class="index-span">Sansanにおける２種類のサクセス</p>
                             <p class="index-title">Sansanにおける２種類のサクセス</p>
-                            <span class="index-span">ライトサクセスとディープサクセスの発生パターン</span>
+                            <p class="index-span">ライトサクセスとディープサクセスの発生パターン</p>
                         </div>
                     </div>
                     <!-- End Index -->
@@ -96,15 +96,15 @@
                         <div class="news-item-1">
                             <div class="news-title-1">「Sansanだから通じるメソッドだ」は、本当か？</div>
                             <div class="new-1-content">
-                                <p class="">「ライトサクセス／ディープサクセス」の考え方は独自に考案したもので、国内外のSaaSやカスタマーサクセス界隈において一般的というわけではありません。</p>
-                                <p class="">私は長らくSansanのカスタマーサクセス部門で戦略立案に携わる傍ら、カスタマーサクセスの情報発信にも力を入れてきました。発信する情報はSansanで養われ、鍛えられたCSメソッドの数々です。すると、こんなご意見をいただくことがありました。</p>
-                                <p class="">最初は自社への不満を漏らしているだけかとも思いましたが、主張をされている方々のプロダクトをつぶさに見てみると、提供している価値とそのサクセスの対象がさまざまであることに気づきました。つまり、サクセスしにくいプロダクトとしての共通性があるのではなく、他の観点によってメソッドが通じるか否かが判断されるようです。</p>
+                                <p class="new-1-span">「ライトサクセス／ディープサクセス」の考え方は独自に考案したもので、国内外のSaaSやカスタマーサクセス界隈において一般的というわけではありません。<br></p>
+                                <span class="new-1-span">私は長らくSansanのカスタマーサクセス部門で戦略立案に携わる傍ら、カスタマーサクセスの情報発信にも力を入れてきました。発信する情報はSansanで養われ、鍛えられたCSメソッドの数々です。すると、こんなご意見をいただくことがありました。<br></span>
+                                <span class="new-1-span">最初は自社への不満を漏らしているだけかとも思いましたが、主張をされている方々のプロダクトをつぶさに見てみると、提供している価値とそのサクセスの対象がさまざまであることに気づきました。つまり、サクセスしにくいプロダクトとしての共通性があるのではなく、他の観点によってメソッドが通じるか否かが判断されるようです。<br></span>
                                 <img src="img/icon.png" alt="">
-                                <p class=""> 多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。</p>
+                                <span class="new-1-span"> 多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。</span>
                             </div>
                         </div>
                         <div class="new-2">
-                            <div class="new-1-tile">「2つのサクセス」という考え方</div>
+                            <div class="news-title-2">「2つのサクセス」という考え方</div>
                             <div class="new-2-content">
                                 この記事では、SaaS業界の大きなテーマの一つであるこの問いについて、カスタマーサクセスの視点から考えていきます。
                             </div>
