--- a/index.html
+++ b/index.html
@@ -95,34 +95,33 @@
                     <div class="news">
                         <div class="news-item-1">
                             <div class="news-title-1">「Sansanだから通じるメソッドだ」は、本当か？</div>
-                            <div class="new-1-content">
-                                <p class="new-1-span">「ライトサクセス／ディープサクセス」の考え方は独自に考案したもので、国内外のSaaSやカスタマーサクセス界隈において一般的というわけではありません。<br></p>
-                                <span class="new-1-span">私は長らくSansanのカスタマーサクセス部門で戦略立案に携わる傍ら、カスタマーサクセスの情報発信にも力を入れてきました。発信する情報はSansanで養われ、鍛えられたCSメソッドの数々です。すると、こんなご意見をいただくことがありました。<br></span>
-                                <span class="new-1-span">最初は自社への不満を漏らしているだけかとも思いましたが、主張をされている方々のプロダクトをつぶさに見てみると、提供している価値とそのサクセスの対象がさまざまであることに気づきました。つまり、サクセスしにくいプロダクトとしての共通性があるのではなく、他の観点によってメソッドが通じるか否かが判断されるようです。<br></span>
-                                <img src="img/icon.png" alt="">
-                                <span class="new-1-span"> 多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。</span>
+                            <div class="news-content-1">
+                                <div class="news-1-span" style="margin-bottom: 50px"><span>「ライトサクセス／ディープサクセス」の考え方は独自に考案したもので、国内外のSaaSやカスタマーサクセス界隈において一般的というわけではありません。<br></span></div>
+                                <div class="news-1-span"><span>私は長らくSansanのカスタマーサクセス部門で戦略立案に携わる傍ら、カスタマーサクセスの情報発信にも力を入れてきました。発信する情報はSansanで養われ、鍛えられたCSメソッドの数々です。すると、こんなご意見をいただくことがありました。<br></span></div>
+                                <div class="news-1-span"><span>最初は自社への不満を漏らしているだけかとも思いましたが、主張をされている方々のプロダクトをつぶさに見てみると、提供している価値とそのサクセスの対象がさまざまであることに気づきました。つまり、サクセスしにくいプロダクトとしての共通性があるのではなく、他の観点によってメソッドが通じるか否かが判断されるようです。<br></span></div>
+                                <div class="news-1-span" style="margin-bottom: 40px"><img src="img/icon.png" alt=""><span> 多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。</span></div>
                             </div>
                         </div>
-                        <div class="new-2">
+                        <div class="news-item-2">
                             <div class="news-title-2">「2つのサクセス」という考え方</div>
-                            <div class="new-2-content">
+                            <div class="news-content-2">
                                 この記事では、SaaS業界の大きなテーマの一つであるこの問いについて、カスタマーサクセスの視点から考えていきます。
                             </div>
                         </div>
-                        <div class="new-3">
-                            <div class="new-2-tile">ライトサクセスとディープサクセス</div>
-                            <div class="new-3-content">
-                                ライトサクセスの定義は（顧客の）現場にサクセスをもたらしている状態です。そして、ディープサクセスとは（顧客の）経営にサクセスをもたらしている状態です。<br> 多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。
+                        <div class="news-item-3">
+                            <div class="news-title-3">ライトサクセスとディープサクセス</div>
+                            <div class="news-content-3">
+                                <div class="news-3-span" style="margin-bottom: 30px"><span>ライトサクセスの定義は（顧客の）現場にサクセスをもたらしている状態です。そして、ディープサクセスとは（顧客の）経営にサクセスをもたらしている状態です。</span></div>
+                                <div class="news-3-span" style="margin-bottom: 60px"><span>多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。</span></div>
                             </div>
                             <div class="news-3-img">
                                 <img src="img/new1.png" alt="">
                                 <img src="img/new2.png" alt="">
-                                <div class="news-3-img-tile">キャプション付きの場合下に表示されます。最大文字数で５６文字程度で２行に収まります。レスポンシブで最大８０文字です
-                                </div>
                             </div>
+                            <div class="news-3-img-tile">キャプション付きの場合下に表示されます。最大文字数で５６文字程度で２行に収まります。レスポンシブで最大８０文字です</div>
                         </div>
-                        <div class="new-4">
-                            <div class="new-4-tile">Sansanにおける２種類のサクセス</div>
+                        <div class="news-item-4">
+                            <div class="news-title-4">Sansanにおける２種類のサクセス</div>
                             <div class="new-4-content">
                                 典型的なSaaSプロダクトにおいては、ライトサクセスとディープサクセスが段階的に発生します。まずはライトサクセスで現場に業務改善効果を体感してもらい、それを増幅させて経営的な利益というディープサクセスへ繋げていくのです。言うは易しですが、実際には3年程度の時間をかけてジワジワと実現されます。
                             </div>
