--- a/index.html
+++ b/index.html
@@ -180,21 +180,21 @@
                             <table class="table-item-1">
                                 <thead>
                                     <tr>
-                                        <th style="width: 131px">&nbsp;</th>
-                                        <th style="width: 282px">ThがあるVer　左寄せ</th>
-                                        <th style="width: 282px">ThがあるVer　左寄せ</th>
-                                        <th style="width: 282px">ThがあるVer　左寄せ</th>
+                                        <th style="width: 131px; border-left:none; border-top-left-radius: 7px; ">&nbsp;</th>
+                                        <th style="width: 282px; text-align: left">ThがあるVer　左寄せ</th>
+                                        <th style="width: 282px; text-align: center">ThがあるVer　左寄せ</th>
+                                        <th style="width: 282px; text-align: right; border-top-right-radius: 5px;">ThがあるVer　左寄せ</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>見出し１</td>
+                                        <td style="border-left:none; background-color: #ECF3FA; font-family: NotoSansJP-Regular">見出し１</td>
                                         <td>コンテンツ３の内容が入ります。&nbsp;</td>
                                         <td>コンテンツ３の内容が入ります。</td>
                                         <td>コンテンツ３の内容が入ります。</td>
                                     </tr>
                                     <tr>
-                                        <td>見出し2</td>
+                                        <td style="border-left:none; background-color: #ECF3FA; font-family: NotoSansJP-Regular">見出し2</td>
                                         <td>コンテンツ３</td>
                                         <td>コンテンツ３</td>
                                         <td>コンテンツ３</td>
@@ -202,20 +202,20 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="table2-tile">4列 20%20%20%40%</div>
-                        <div class="table2">
-                            <table class="blueTable">
+                        <div class="table-tile-2">4列 20%20%20%40%</div>
+                        <div class="table-content-2">
+                            <table class="table-item-2">
                                 <thead>
-                                    <tr class="b">
-                                        <th style width="20%">width20%設定</th>
-                                        <th>width20%設定</th>
-                                        <th>width20%設定</th>
-                                        <th width="40%">width40%設定</th>
+                                    <tr>
+                                        <th style="width: 20%; border-left: none; background-color: #ECF3FA">width20%設定</th>
+                                        <th style="width: 20%">width20%設定</th>
+                                        <th style="width: 20%">width20%設定</th>
+                                        <th style="width: 40%">width40%設定</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="c">
-                                        <td>基本は左揃え</td>
+                                    <tr>
+                                        <td style="border-left: none; background-color: #ECF3FA">基本は左揃え</td>
                                         <td>マルチエクスペリエンスを向上するアバイアのコンタクトセンターソリューション</td>
                                         <td>マルチエクスペリエンスを向上するアバイアのコンタクトセンターソリューション</td>
                                         <td>マルチエクスペリエンスを向上するアバイアのコンタクトセンターソリューション</td>
@@ -223,19 +223,24 @@
                                 </tbody>
                             </table>
                         </div>
+                        <div class="table-tile">
+                            <img src="./img/icon.png">
+                            <span>多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。</span>
+                        </div>
                         <div class="table3">
-                            <div class="table3-tile">横スクロールあり</div>
-                            <table class="Table">
-                                <tbody class="d">
+                            <div class="table-tile-3">横スクロールあり</div>
+                            <div class="table-content-2">
+                                <table class="Table">
+                                    <tbody >
                                     <tr>
-                                        <td width="40%">width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
-                                        <td width="20%">width20%に設定。上下中央クラス設定</td>
-                                        <td width="40%">width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
-                                        <td width="40%">width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
+                                        <td style="width: 40%">width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
+                                        <td style="width: 20%">width20%に設定。上下中央クラス設定</td>
+                                        <td style="width: 40%">width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
+                                        <td style="width: 40%">width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
                                     </tr>
-                                </tbody>
-                            </table>
-
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                     <!-- End Tables -->
