--- a/index.html
+++ b/index.html
@@ -180,21 +180,27 @@
                             <table class="table-item-1">
                                 <thead>
                                     <tr>
-                                        <th style="width: 131px; border-left:none; border-top-left-radius: 7px; ">&nbsp;</th>
+                                        <th style="width: 131px; border-left:none; border-top-left-radius: 7px; ">&nbsp;
+                                        </th>
                                         <th style="width: 282px; text-align: left">ThがあるVer　左寄せ</th>
                                         <th style="width: 282px; text-align: center">ThがあるVer　左寄せ</th>
-                                        <th style="width: 282px; text-align: right; border-top-right-radius: 5px;">ThがあるVer　左寄せ</th>
+                                        <th style="width: 282px; text-align: right; border-top-right-radius: 5px;">
+                                            ThがあるVer　左寄せ</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td style="border-left:none; background-color: #ECF3FA; font-family: NotoSansJP-Regular">見出し１</td>
+                                        <td
+                                            style="border-left:none; background-color: #ECF3FA; font-family: NotoSansJP-Regular">
+                                            見出し１</td>
                                         <td>コンテンツ３の内容が入ります。&nbsp;</td>
                                         <td>コンテンツ３の内容が入ります。</td>
                                         <td>コンテンツ３の内容が入ります。</td>
                                     </tr>
                                     <tr>
-                                        <td style="border-left:none; background-color: #ECF3FA; font-family: NotoSansJP-Regular">見出し2</td>
+                                        <td
+                                            style="border-left:none; background-color: #ECF3FA; font-family: NotoSansJP-Regular">
+                                            見出し2</td>
                                         <td>コンテンツ３</td>
                                         <td>コンテンツ３</td>
                                         <td>コンテンツ３</td>
@@ -207,7 +213,8 @@
                             <table class="table-item-2">
                                 <thead>
                                     <tr>
-                                        <th style="width: 20%; border-left: none; background-color: #ECF3FA">width20%設定</th>
+                                        <th style="width: 20%; border-left: none; background-color: #ECF3FA">width20%設定
+                                        </th>
                                         <th style="width: 20%">width20%設定</th>
                                         <th style="width: 20%">width20%設定</th>
                                         <th style="width: 40%">width40%設定</th>
@@ -227,17 +234,20 @@
                             <img src="./img/icon.png">
                             <span>多くのSaaS関係者はこのことを体感していますが、明確に意識している人は少ないかもしれません。社内のビジネスサイドの方から「うちのプロダクトはROIを問われたときに弱い」といった会話が出てくるのであれば、この2つの概念を正しく理解していない可能性があります。</span>
                         </div>
-                        <div class="table3">
-                            <div class="table-tile-3">横スクロールあり</div>
-                            <div class="table-content-2">
-                                <table class="Table">
-                                    <tbody >
-                                    <tr>
-                                        <td style="width: 40%">width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
-                                        <td style="width: 20%">width20%に設定。上下中央クラス設定</td>
-                                        <td style="width: 40%">width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
-                                        <td style="width: 40%">width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
-                                    </tr>
+                        <div class="table-tile-3">横スクロールあり</div>
+                        <div class="table-content-3">
+                            <div class="table-item-3">
+                                <table class="table-item-3">
+                                    <tbody>
+                                        <tr>
+                                            <td style="width: 40%; background-color: #ECF3FA">
+                                                width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
+                                            <td style="width: 20%">width20%に設定。上下中央クラス設定</td>
+                                            <td style="width: 40%">
+                                                width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
+                                            <td style="width: 40%">
+                                                width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
@@ -245,43 +255,47 @@
                     </div>
                     <!-- End Tables -->
                     <!--next new-->
-                    <div class="nextnew">
-                        <div class="new-6">
-                            <div class="new-6-tile">プロダクトの特徴と2つのサクセスの関係</div>
-                            <div class="new-6-content1">
-                                「ライトサクセス／ディープサクセス」の考え方は独自に考案したもので、国内外のSaaSやカスタマーサクセス界隈において一般的というわけではありません。
-                            </div>
-                            <div class="new-6-content2">
-                                私は長らくSansanのカスタマーサクセス部門で戦略立案に携わる傍ら、カスタマーサクセスの情報発信にも力を入れてきました。発信する情報はSansanで養われ、鍛えられたCSメソッドの数々です。すると、こんなご意見をいただくことがありました。
-                            </div>
-                        </div>
-                        <div class="new-7">
-                            <div class="new-7-tile">ライトサクセスとディープサクセスの発生パターン</div>
-                            <div class="new-7-content1">ライトサクセス（現場が喜ぶ）</div>
-                            <span class="new-7-content2">名刺を持ち歩かなくてよくなる</span>
-                            <span class="new-7-content2">名刺フォルダーでデスク周りがかさばらない</span>
-                            <span class="new-7-content2">名刺をもらった相手の連絡先をクラウド上で管理し、スマホから閲覧できる</span>
-                            <div class="new-7-content3">
-                                また、SaaSというものは元来、特定業務の問題を解決するためにサービス化されているので、顧客が真に望むビジネスサクセスを一つのSaaSだけで達成するのは、そもそも無理があるのです。
-                            </div>
-                            <div class="new-7-content4">
-                                先ほども書いたとおり、一つのSaaSで提供できるサクセスには限界があり、それがディープサクセス状態とまで言えないことは往々にしてあります。このような場合、プロダクトが解決すべき問題領域を広げることによってディープサクセスの「深さ」と「広さ」を向上させる手があります。
+                    <div class="next-new">
+                        <div class="news-item-6">
+                            <div class="news-title-6">プロダクトの特徴と2つのサクセスの関係</div>
+                            <div class="news-content-6">
+                                <p style="margin-bottom: 60px">
+                                    「ライトサクセス／ディープサクセス」の考え方は独自に考案したもので、国内外のSaaSやカスタマーサクセス界隈において一般的というわけではありません。</p>
+                                <p>私は長らくSansanのカスタマーサクセス部門で戦略立案に携わる傍ら、カスタマーサクセスの情報発信にも力を入れてきました。発信する情報はSansanで養われ、鍛えられたCSメソッドの数々です。すると、こんなご意見をいただくことがありました。
+                                </p>
                             </div>
                         </div>
-                        <div class="new-8">
-                            <div class="new-8-tile">ディープサクセス（経営が喜ぶ）</div>
-                            <div class="new-8-content1">1. これはダミーです。文字の大きさ、量、字間、行間などを確認するために入れています。</div>
-                            <div class="new-8-content2">2. liとliの間は18px。フォントサイズ16pxが標準設定です。</div>
-                            <div class="new-8-content3">
-                                また、SaaSというものは元来、特定業務の問題を解決するためにサービス化されているので、顧客が真に望むビジネスサクセスを一つのSaaSだけで達成するのは、そもそも無理があるのです。
+                        <div class="news-item-7">
+                            <div class="news-title-7">ライトサクセスとディープサクセスの発生パターン</div>
+                            <div class="news-content-7">ライトサクセス（現場が喜ぶ）</div>
+                            <div class="news-7-li">名刺を持ち歩かなくてよくなる</div>
+                            <div class="news-7-li">名刺フォルダーでデスク周りがかさばらない</div>
+                            <div class="news-7-li">名刺をもらった相手の連絡先をクラウド上で管理し、スマホから閲覧できる</div>
+                            <div class="news-7-span">
+                                <img src="img/icon.png">
+                                <span>また、SaaSというものは元来、特定業務の問題を解決するためにサービス化されているので、顧客が真に望むビジネスサクセスを一つのSaaSだけで達成するのは、そもそも無理があるのです。</span>
                             </div>
-                            <div class="new-8-content4">
-                                先ほども書いたとおり、一つのSaaSで提供できるサクセスには限界があり、それがディープサクセス状態とまで言えないことは往々にしてあります。このような場合、プロダクトが解決すべき問題領域を広げることによってディープサクセスの「深さ」と「広さ」を向上させる手があります。
+                            <div class="news-7-span">
+                                <img src="img/icon1.png">
+                                <span>先ほども書いたとおり、一つのSaaSで提供できるサクセスには限界があり、それがディープサクセス状態とまで言えないことは往々にしてあります。このような場合、プロダクトが解決すべき問題領域を広げることによってディープサクセスの「深さ」と「広さ」を向上させる手があります。</span>
+                            </div>
+                        </div>
+                        <div class="news-item-8">
+                            <div class="news-title-8">ディープサクセス（経営が喜ぶ）</div>
+                            <div class="news-content-8">1. これはダミーです。文字の大きさ、量、字間、行間などを確認するために入れています。</div>
+                            <div class="news-content-8">2. liとliの間は18px。フォントサイズ16pxが標準設定です。</div>
+                            <div class="news-8-span" style="margin-bottom: 45px">
+                                <img src="img/icon.png">
+                                <span>また、SaaSというものは元来、特定業務の問題を解決するためにサービス化されているので、顧客が真に望むビジネスサクセスを一つのSaaSだけで達成するのは、そもそも無理があるのです。</span>
+                            </div>
+                            <div class="news-8-span" style="margin-bottom: 25px">
+                                <img src="img/icon1.png">
+                                <span>先ほども書いたとおり、一つのSaaSで提供できるサクセスには限界があり、それがディープサクセス状態とまで言えないことは往々にしてあります。このような場合、プロダクトが解決すべき問題領域を広げることによってディープサクセスの「深さ」と「広さ」を向上させる手があります。</span>
                             </div>
                         </div>
                     </div>
                     <div class="text-block">
-                        <div class="h">
+                        <div class="text-block-content">
                             文章強調のブロック。このフォントは標準フォントサイズ16pxです。他にも用意したフォントサイズで使用できますが。背景色のグレーのマージンは40pxで変わりません。
                         </div>
                     </div>
@@ -291,10 +305,11 @@
                         <img src="img/img3.png" alt="">
                         <img src="img/img4.png" alt="">
                         <div class="img-tile">
-                            キャプション付きの場合下に表示されます。最大２行を超えない方が美しいかと思います。最大文字数で３９文字程度で２行に収まります。レスポンシブで最大８０文字です</div>
+                            キャプション付きの場合下に表示されます。最大２行を超えない方が美しいかと思います。最大文字数で３９文字程度で２行に収まります。レスポンシブで最大８０文字です
+                        </div>
                     </div>
                     <div class="quote">
-                        <p class="j">
+                        <p class="quote-content">
                             標準本文フォントサイズ16px。Newsと同じフォント設定です。ｐブロックをわけるとマージンボトムに30pxはいります。文字の大きさ、量、字間、行間などを確認するために入れています。
                         </p>
                     </div>
